# estetica-main

./: README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
estetica/: admin.py  apps.py
estetica/migrations/: 0001_initial.py
estetica/models/: __init__.py  agendamento.py  cliente.py  pacote.py  pacoteprocesso.py  procedimento.py
estetica/serializers/: __init__.py  agendamento.py  cliente.py  pacote.py  pacoteprocesso.py  procedimento.py
estetica/views/: __init__.py  agendamento.py  cliente.py  pacote.py  pacoteprocesso.py  procedimento.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
